RESOLVED FIXED183599
Fix some build errors and cleanup QuickLookSPI.h
https://bugs.webkit.org/show_bug.cgi?id=183599
Summary Fix some build errors and cleanup QuickLookSPI.h
Dean Jackson
Reported 2018-03-13 10:52:53 PDT
Fix some build errors and cleanup QuickLookSPI.h
Attachments
Patch (2.39 KB, patch)
2018-03-13 10:54 PDT, Dean Jackson
thorton: review+
Dean Jackson
Comment 1 2018-03-13 10:54:04 PDT
Dean Jackson
Comment 2 2018-03-13 13:08:42 PDT
Radar WebKit Bug Importer
Comment 3 2018-03-13 13:10:11 PDT
Note You need to log in before you can comment on or make changes to this bug.