Fix some build errors and cleanup QuickLookSPI.h https://bugs.webkit.org/show_bug.cgi?id=183599

Reviewed by Ryan Haddad.

* pal/spi/ios/QuickLookSPI.h:

Canonical link: https://commits.webkit.org/199266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229580 268f45cc-cd09-0410-ab3c-d52691b4dbfc